need to figure out a replacement font and other issues
- replacement icons for iconmostr
- rating truncate fix  for the movie and tv page
- few console errors

--- a/src/style/Item.css
+++ b/src/style/Item.css
@@ -63,7 +63,8 @@
 }
 
 .details-star {
-    font-size: 3rem;
+    height: 3rem;
+    width: auto;
     margin-top: .5rem;
 }
 
